--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -937,6 +937,10 @@ body > main {
   min-height: 100vh;
 }
 
+body > main > section:last-of-type:not(.hero) {
+  padding-bottom: 95px;
+}
+
 input {
   font-family: "Cabin", "San Francisco", "Helvetica Neue", sans-serif;
   border: none;
@@ -984,6 +988,10 @@ button {
 [hidden] {
   display: none;
   visibility: hidden;
+}
+
+.rounded {
+  border-radius: 12px;
 }
 
 /* Switchery styles. */
@@ -1125,25 +1133,6 @@ button {
   text-align: center;
   text-decoration: none;
   z-index: 1;
-}
-
-.waves-button {
-  padding: 0.85em 1.1em;
-  border-radius: 0.2em;
-}
-
-.waves-button-input {
-  margin: 0;
-  padding: 0.85em 1.1em;
-}
-
-.waves-input-wrapper {
-  border-radius: 0.2em;
-  vertical-align: bottom;
-}
-
-.waves-input-wrapper.waves-button {
-  padding: 0;
 }
 
 .waves-input-wrapper .waves-button-input {
