Add pjax for auth pages

--- a/resources/assets/sass/components/nav-bar.scss
+++ b/resources/assets/sass/components/nav-bar.scss
@@ -81,6 +81,10 @@
 			background: transparent;
 			color: #fff;
 			font-weight: 600;
+			
+			&::placeholder {
+				color: #d7d7d7;
+			}
 		}
 
 		&:after {
