--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -69,6 +69,17 @@ button {
 	border-radius: 12px;
 }
 
+.loading {
+	filter: blur(2.5px);
+	opacity: 0.35;
+	pointer-events: none;
+}
+
+[loadable] {
+	will-change: filter, opacity;
+	transition: filter .19s ease-in-out, opacity .25s ease;
+}
+
 /**
  Pace loader styles.
 */
