--- a/resources/assets/sass/components/hero.scss
+++ b/resources/assets/sass/components/hero.scss
@@ -14,7 +14,7 @@
 		height: 100%;
 		left: 0;
 		top: 0;
-		background: url("/assets/images/hero/clipboard-field.png") center center;
+		background: url("/assets/images/hero/hero-field.jpg") center center;
 		background-size: cover;
 		position: absolute;
 		z-index: 1;
