--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -3622,7 +3622,7 @@ body {
 }
 
 .auth__background__image {
-  background: url("/assets/images/auth/whistle-in-the-sky.jpg") no-repeat;
+  background: url("/assets/images/auth/clipboard.jpg") no-repeat top right;
   background-size: cover;
   width: 100%;
   height: 100%;
