--- a/resources/assets/sass/auth.scss
+++ b/resources/assets/sass/auth.scss
@@ -396,7 +396,7 @@ body {
 		align-items: center;
 
 		@include has('image') {
-			background: url("/assets/images/auth/whistle-in-the-sky.jpg") no-repeat;
+			background: url("/assets/images/auth/clipboard.jpg") no-repeat top right;
 			background-size: cover;
 			width: 100%;
 			height: 100%;
