--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -3494,6 +3494,11 @@ body {
   color: #fff;
   -webkit-box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
           box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
+  will-change: transform;
+  -webkit-transition: -webkit-transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
+  transition: -webkit-transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
+  transition: transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
+  transition: transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s, -webkit-transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
 }
 
 .auth__form__actions__button--signin {
@@ -3518,6 +3523,11 @@ body {
   font-weight: bold;
   margin: 0 .4rem;
   text-transform: capitalize;
+}
+
+.auth__form__actions__button:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .auth__form__separator {
@@ -3633,7 +3643,7 @@ body {
 }
 
 .auth__background__overlay {
-  background: radial-gradient(circle at top right, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.2));
+  background: radial-gradient(circle at top right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.15));
   width: 100%;
   height: 100%;
   display: block;
