--- a/resources/assets/sass/auth.scss
+++ b/resources/assets/sass/auth.scss
@@ -289,6 +289,8 @@ body {
 				align-items: center;
 				color: #fff;
 				box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
+				will-change: transform;
+				transition: transform cubic-bezier(.45,.07,.43,1.18) .219s;
 
 				@include as('signin') {
 					background: linear-gradient(211deg, $theme-primary, $theme-primary-light) !important;
@@ -312,6 +314,10 @@ body {
 					font-weight: bold;
 					margin: 0 .4rem;
 					text-transform: capitalize;
+				}
+
+				&:hover {
+					transform: scale(1.05);
 				}
 			}
 		}
@@ -407,7 +413,7 @@ body {
 		}
 
 		@include has('overlay') {
-			background: radial-gradient(circle at top right, rgba(#000, .65), rgba(#000, .2));
+			background: radial-gradient(circle at top right, rgba(#000, .6), rgba(#000, .15));
 			width: 100%;
 			height: 100%;
 			display: block;
