--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -13,6 +13,8 @@ $theme-primary-light: #50a946;
 $theme-footer-light: #449151;
 $theme-footer-gradient: linear-gradient(to bottom, $theme-footer-light, #2a692d 88%);
 
+$form-error-red: #fb5050;
+
 // Widths & Heights
 $footer-curve-height: 95px;
 $container-width-large: 1440px;
