--- a/public/css/app.css
+++ b/public/css/app.css
@@ -970,6 +970,34 @@ i.location-icon:after {
   }
 }
 
+@-webkit-keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+}
+
 @-webkit-keyframes fadeInLeft {
   from {
     opacity: 0;
@@ -1119,6 +1147,42 @@ i.location-icon:after {
           animation-name: bounceInDown;
 }
 
+.fadeIn-enter-active {
+  -webkit-animation: fadeIn .35s;
+          animation: fadeIn .35s;
+}
+
+.fadeIn-leave-active {
+  animation: fadeIn .35s reverse;
+}
+
+.fadeInLeft-enter-active {
+  -webkit-animation: fadeInLeft .35s;
+          animation: fadeInLeft .35s;
+}
+
+.fadeInLeft-leave-active {
+  animation: fadeInLeft .35s reverse;
+}
+
+.fadeInDown-enter-active {
+  -webkit-animation: fadeInDown .35s;
+          animation: fadeInDown .35s;
+}
+
+.fadeInDown-leave-active {
+  animation: fadeInDown .35s reverse;
+}
+
+.fadeInUp-enter-active {
+  -webkit-animation: fadeInUp .35s;
+          animation: fadeInUp .35s;
+}
+
+.fadeInUp-leave-active {
+  animation: fadeInUp .35s reverse;
+}
+
 @-webkit-keyframes line-scale-pulse-out-rapid {
   0% {
     -webkit-transform: scaley(1);
@@ -1263,6 +1327,11 @@ button {
   transition: opacity .25s ease, -webkit-filter .19s ease-in-out;
   transition: filter .19s ease-in-out, opacity .25s ease;
   transition: filter .19s ease-in-out, opacity .25s ease, -webkit-filter .19s ease-in-out;
+}
+
+.animated {
+  -webkit-animation-duration: 0.45s;
+          animation-duration: 0.45s;
 }
 
 /**
