--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -970,6 +970,34 @@ i.location-icon:after {
   }
 }
 
+@-webkit-keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+}
+
 @-webkit-keyframes fadeInLeft {
   from {
     opacity: 0;
@@ -1119,6 +1147,42 @@ i.location-icon:after {
           animation-name: bounceInDown;
 }
 
+.fadeIn-enter-active {
+  -webkit-animation: fadeIn .35s;
+          animation: fadeIn .35s;
+}
+
+.fadeIn-leave-active {
+  animation: fadeIn .35s reverse;
+}
+
+.fadeInLeft-enter-active {
+  -webkit-animation: fadeInLeft .35s;
+          animation: fadeInLeft .35s;
+}
+
+.fadeInLeft-leave-active {
+  animation: fadeInLeft .35s reverse;
+}
+
+.fadeInDown-enter-active {
+  -webkit-animation: fadeInDown .35s;
+          animation: fadeInDown .35s;
+}
+
+.fadeInDown-leave-active {
+  animation: fadeInDown .35s reverse;
+}
+
+.fadeInUp-enter-active {
+  -webkit-animation: fadeInUp .35s;
+          animation: fadeInUp .35s;
+}
+
+.fadeInUp-leave-active {
+  animation: fadeInUp .35s reverse;
+}
+
 @-webkit-keyframes line-scale-pulse-out-rapid {
   0% {
     -webkit-transform: scaley(1);
@@ -1263,6 +1327,11 @@ button {
   transition: opacity .25s ease, -webkit-filter .19s ease-in-out;
   transition: filter .19s ease-in-out, opacity .25s ease;
   transition: filter .19s ease-in-out, opacity .25s ease, -webkit-filter .19s ease-in-out;
+}
+
+.animated {
+  -webkit-animation-duration: 0.45s;
+          animation-duration: 0.45s;
 }
 
 /**
@@ -3293,6 +3362,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
 .auth__form__input {
@@ -3334,6 +3404,12 @@ body {
   will-change: color;
   -webkit-transition: color ease-in-out .268s;
   transition: color ease-in-out .268s;
+}
+
+.auth__form__input--name:before {
+  content: "\F112";
+  top: .1rem;
+  left: 1.45rem;
 }
 
 .auth__form__input--email:before {
@@ -3528,11 +3604,12 @@ body {
   color: #fff;
   -webkit-box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
           box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
-  will-change: transform;
-  -webkit-transition: -webkit-transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
-  transition: -webkit-transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
-  transition: transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
-  transition: transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s, -webkit-transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
+  will-change: transform, opacity;
+  opacity: 0.68;
+  -webkit-transition: opacity ease-in-out 0.22s, -webkit-transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
+  transition: opacity ease-in-out 0.22s, -webkit-transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
+  transition: transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s, opacity ease-in-out 0.22s;
+  transition: transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s, opacity ease-in-out 0.22s, -webkit-transform cubic-bezier(0.45, 0.07, 0.43, 1.18) 0.219s;
 }
 
 .auth__form__actions__button--signin {
@@ -3559,9 +3636,11 @@ body {
   text-transform: capitalize;
 }
 
-.auth__form__actions__button:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+.auth__form__actions__button:hover,
+.auth__form__actions__button.can-submit {
+  -webkit-transform: scale(1.04);
+          transform: scale(1.04);
+  opacity: 1;
 }
 
 .auth__form__separator {
