--- a/resources/assets/sass/_animations.scss
+++ b/resources/assets/sass/_animations.scss
@@ -20,6 +20,19 @@
 	}
 }
 
+
+@keyframes fadeInUp {
+	from {
+		opacity: 0;
+		transform: translate3d(0, 100%, 0);
+	}
+
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
+}
+
 @keyframes fadeInLeft {
 	from {
 		opacity: 0;
@@ -94,6 +107,34 @@
 
 .bounceInDown {
 	animation-name: bounceInDown;
+}
+
+.fadeIn-enter-active {
+	animation: fadeIn .35s;
+}
+.fadeIn-leave-active {
+	animation: fadeIn .35s reverse;
+}
+
+.fadeInLeft-enter-active {
+	animation: fadeInLeft .35s;
+}
+.fadeInLeft-leave-active {
+	animation: fadeInLeft .35s reverse;
+}
+
+.fadeInDown-enter-active {
+	animation: fadeInDown .35s;
+}
+.fadeInDown-leave-active {
+	animation: fadeInDown .35s reverse;
+}
+
+.fadeInUp-enter-active {
+	animation: fadeInUp .35s;
+}
+.fadeInUp-leave-active {
+	animation: fadeInUp .35s reverse;
 }
 
 // Loader
