--- a/resources/assets/sass/auth.scss
+++ b/resources/assets/sass/auth.scss
@@ -148,6 +148,7 @@ body {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		position: relative;
 
 		@include has('input') {
 			position: relative;
@@ -173,6 +174,14 @@ body {
 				color: #adadad;
 				will-change: color;
 				transition: color ease-in-out .268s;
+			}
+
+			@include as('name') {
+				&:before {
+					content: $icons8-var-gender-neutral-user;
+					top: .1rem;
+					left: 1.45rem;
+				}
 			}
 
 			@include as('email') {
@@ -320,8 +329,9 @@ body {
 				align-items: center;
 				color: #fff;
 				box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
-				will-change: transform;
-				transition: transform cubic-bezier(.45,.07,.43,1.18) .219s;
+				will-change: transform, opacity;
+				opacity: 0.68;
+				transition: transform cubic-bezier(.45,.07,.43,1.18) .219s, opacity ease-in-out .22s;
 
 				@include as('signin') {
 					background: linear-gradient(211deg, $theme-primary, $theme-primary-light) !important;
@@ -347,8 +357,9 @@ body {
 					text-transform: capitalize;
 				}
 
-				&:hover {
-					transform: scale(1.05);
+				&:hover, &.can-submit {
+					transform: scale(1.04);
+					opacity: 1;
 				}
 			}
 		}
