--- a/resources/assets/sass/auth.scss
+++ b/resources/assets/sass/auth.scss
@@ -31,6 +31,7 @@ body {
 		@include as('main') {
 			flex: 1;
 			background: #fff;
+			max-width: 50%;
 
 			> nav {
 				justify-content: space-between;
@@ -149,6 +150,54 @@ body {
 		justify-content: center;
 		align-items: center;
 		position: relative;
+
+		@include as('confirm') {
+			padding: 1rem 0;
+			animation: fadeInRight .459s;
+
+			.confirmation-inputs {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				.confirmation-input {
+					margin: 0 .3rem;
+					background: #eee;
+					border-radius: 8px;
+
+					&:first-of-type {
+						margin-left: 0;
+					}
+
+					&:last-of-type {
+						margin-right: 0;
+					}
+
+					> input {
+						font-size: 3.2rem;
+						color: #353535;
+						border-radius: 8px;
+						height: 4.8rem;
+						width: 4.5rem;
+						vertical-align: baseline;
+						background: #f5f5f5 padding-box;
+						text-align: center;
+
+						&:focus {
+							border: 1.5px solid rgba($theme-primary-light, 0.7);
+							box-shadow: 0 2px 18px rgba(0, 0, 0, 0.15);
+						}
+					}
+				}
+			}
+
+			button.resend {
+				margin-top: .7rem;
+				padding: .65rem 1.25rem;
+				border-radius: 12px;
+				color: #5f5f5f;
+			}
+		}
 
 		@include has('input') {
 			position: relative;
