Complete sign up/in and confirm process

--- a/resources/assets/sass/auth.scss
+++ b/resources/assets/sass/auth.scss
@@ -107,6 +107,10 @@ body {
 	}
 
 	@include has('panel') {
+		@include has('form') {
+			position: relative;
+		}
+
 		@include has('logo') {
 			span {
 				display: inline-block;
