--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -70,14 +70,33 @@ button {
 }
 
 .loading {
-	filter: blur(2.5px);
-	opacity: 0.35;
 	pointer-events: none;
+	position: relative;
+
+	> .form-loader {
+		display: flex !important;
+	}
+
+	> [loadable] {
+		filter: blur(2.5px);
+		opacity: 0.35;
+	}
 }
 
 [loadable] {
 	will-change: filter, opacity;
 	transition: filter .19s ease-in-out, opacity .25s ease;
+}
+
+.form-loader {
+	display: none;
+	justify-content: center;
+	align-content: center;
+	position: absolute;
+	left: 0;
+	top: 20%;
+	width: 100%;
+	color: $theme-primary;
 }
 
 .animated {
