--- a/resources/assets/sass/components/nav-bar.scss
+++ b/resources/assets/sass/components/nav-bar.scss
@@ -117,4 +117,21 @@
 	.nav-logo {
 		width: 50px;
 	}
+
+	@include has('user') {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	@include has('avatar') {
+		width: 56px;
+		height: 56px;
+
+		img {
+			width: 100%;
+			height: 100%;
+			border-radius: 50%;
+		}
+	}
 }
