Add profile dropdown options

--- a/resources/assets/sass/icons/_variables.scss
+++ b/resources/assets/sass/icons/_variables.scss
@@ -1,10 +1,10 @@
 // Variables
 // --------------------------
 
-
 $icons8-css-prefix: "icons8";
 $icons8-font-name: "Sport-Coach-Finder";
 $icons8-font-path: "/fonts";
+$icons8-version: "3";
 
 $icons8-var-black-twitter-logo: "\f109";
 $icons8-var-caret-arrowhead-facing-down: "\f107";
@@ -12,20 +12,30 @@ $icons8-var-checkmark: "\f111";
 $icons8-var-circular-arrow: "\f110";
 $icons8-var-close-button: "\f114";
 $icons8-var-coach: "\f100";
+$icons8-var-dashboard: "\f11f";
 $icons8-var-email-envelope: "\f10c";
 $icons8-var-facebook: "\f10a";
 $icons8-var-gender-neutral-user: "\f112";
 $icons8-var-google: "\f118";
+$icons8-var-help: "\f122";
+$icons8-var-identification-documents: "\f120";
 $icons8-var-instagram: "\f108";
 $icons8-var-left-arrow: "\f10b";
 $icons8-var-location-marker: "\f106";
 $icons8-var-lock: "\f10d";
 $icons8-var-login: "\f10e";
+$icons8-var-moderator-male: "\f11d";
+$icons8-var-online-support: "\f123";
 $icons8-var-personal-trainer: "\f101";
 $icons8-var-personal-trainer-2: "\f102";
 $icons8-var-phone: "\f113";
 $icons8-var-plus: "\f10f";
 $icons8-var-search: "\f104";
 $icons8-var-search-button: "\f105";
+$icons8-var-security: "\f11c";
+$icons8-var-settings-button: "\f11e";
+$icons8-var-shutdown: "\f11a";
+$icons8-var-survey: "\f121";
+$icons8-var-warning: "\f11b";
 $icons8-var-wheelchair: "\f115";
 $icons8-var-whistle: "\f103";
