--- a/resources/assets/sass/components/nav-bar.scss
+++ b/resources/assets/sass/components/nav-bar.scss
@@ -10,6 +10,18 @@
 	
 	@include as('transparent') {
 		background: transparent;
+
+		.ui-navigation-bar__user {
+			background: transparent !important;
+		}
+
+		.ui-navigation-bar__user__dropdown {
+			border-radius: 1.4rem !important;
+		}
+
+		.ui-navigation-bar__container {
+			padding: 3.5rem 2rem !important;
+		}
 	}
 
 	@include as('main') {
@@ -22,23 +34,26 @@
 	@include has('container') {
 		max-width: 1440px;
 		width: 100%;
-		padding: 3.5rem 2rem;
+		padding: 0 2rem;
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: center;
+		height: 100%;
 	}
 
 	@include has('left') {
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		height: 100%;
 	}
 
 	@include has('right') {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		height: 100%;
 	}
 
 	@include has('link') {
@@ -122,16 +137,251 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-	}
+		height: 100%;
+		padding: 0 1.2rem;
+		position: relative;
+		overflow: visible;
+		will-change: background;
+		transition: background-color ease-in-out .21s;
+		perspective: 1000px;
 
-	@include has('avatar') {
-		width: 56px;
-		height: 56px;
-
-		img {
-			width: 100%;
-			height: 100%;
+		@include has('avatar') {
+			cursor: pointer;
+			margin: .2rem;
+			overflow: hidden;
+			box-shadow: 0 0 18px rgba(0, 0, 0, 0.22);
 			border-radius: 50%;
+
+			img {
+				width: 46px;
+				height: 46px;
+				pointer-events: none;
+			}
+		}
+
+		@include has('name') {
+			padding: 0 1rem;
+			cursor: pointer;
+
+			span {
+				font-size: 1.3rem;
+				color: #fff;
+				font-weight: 600;
+				pointer-events: none;
+			}
+		}
+
+		@include has('caret') {
+			color: #fff;
+			cursor: pointer;
+			
+			&:before {
+				content: $icons8-var-caret-arrowhead-facing-down;
+				@include icons8-font();
+				color: currentColor;
+				font-size: .9rem;
+				pointer-events: none;
+			}
+		}
+
+		&.active {
+			background: #2b6e2f;
+
+			.ui-navigation-bar__user__dropdown {
+				transform: rotateX(0) !important;
+				pointer-events: all !important;
+				opacity: 1 !important;
+			}
+		}
+
+		@include has('dropdown') {
+			position: absolute;
+			right: 0;
+			top: 100%;
+			display: flex;
+			min-width: 320px;
+			border-bottom-left-radius: 1.4rem;
+			border-bottom-right-radius: 1.4rem;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			background: #fff;
+			z-index: #{$navigation-bar-index + 9};
+			overflow: hidden;
+			will-change: transform, opacity;
+			transition: transform ease-in-out .23s, opacity ease .23s;
+			transform-origin: 50% 0;
+			transform: rotateX(-28deg);
+			pointer-events: none;
+			opacity: 0;
+
+			header {
+				width: 100%;
+				position: relative;
+
+				.logout {
+					position: absolute;
+					right: 0.5rem;
+					top: 0.5rem;
+					z-index: 2;
+					
+					button {
+						padding: 3px 6px;
+						margin: .56rem .2rem;
+						background: rgba(#000, 0.25);
+						border-radius: 6px;
+						font-size: 1.05rem;
+						color: #F58E8E;
+						font-weight: 600;
+
+						i {
+							font-size: .8rem;
+						}
+					}
+				}
+
+				.user-info {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					position: relative;
+					z-index: 1;
+
+					&:before {
+						content: '';
+						display: block;
+						position: absolute;
+						top: 0;
+						left: 0;
+						width: 100%;
+						height: calc(100% - 1.3rem);
+						z-index: -1;
+						background: linear-gradient(to bottom right, $theme-primary-light, #236026);
+					}
+
+					.avatar {
+						margin: 1.2rem 0 .8rem;
+						width: 75px;
+						height: 75px;
+						border-radius: 14px;
+						overflow: hidden;
+						box-shadow: 0 0 17px rgba(#000, 0.25);
+
+						img {
+							width: 100%;
+							height: 100%;
+						}
+					}
+
+					strong {
+						color: #fff;
+						font-size: 1.25rem;
+						font-weight: bold;
+					}
+
+					span {
+						margin: .4rem 0;
+						font-size: 1rem;
+						color: #d9d9d9;
+					}
+					
+					em {
+						font-size: .95rem;
+						color: #fff;
+						padding: .3rem .8rem;
+						border-radius: 12px;
+						font-weight: 600;
+						margin: .5rem 0;
+						box-shadow: 0 0 15px rgba(#000, .25);
+
+						&:before {
+							@include icons8-font();
+							margin-right: .2rem;
+							font-size: 1.2rem;
+						}
+						
+						&.unverified {
+							background: #CA5353;
+
+							&:before {
+								content: $icons8-var-warning;
+							}
+						}
+						
+						&.normal {
+							color: #444;
+							background: #dedede;
+
+							&:before {
+								content: $icons8-var-security;
+							}
+						}
+
+						&.coach {
+							background: #2E7D32;
+
+							&:before {
+								content: $icons8-var-personal-trainer-2;
+							}
+						}
+
+						&.admin {
+							background: #446AA8;
+
+							&:before {
+								content: $icons8-var-moderator-male;
+							}
+						}
+					}
+				}
+			}
+			
+			main {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: flex-start;
+				margin-bottom: 1rem;
+
+				.dropdown-link {
+					padding: .8rem .7rem;
+					color: #4A4A4A;
+					border-radius: 12px;
+					outline: none;
+
+					i {
+						color: currentColor;
+						margin-right: 0.6rem;
+						font-size: 1.5rem;
+					}
+
+					span {
+						font-size: 1.15rem;
+						text-transform: capitalize;
+					}
+				}
+			}
+			
+			footer {
+				background: #eee;
+				width: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				.block-button {
+					flex: 1;
+					color: #626262;
+					font-size: 1rem;
+					text-align: center;
+					padding: 1rem 0;
+
+					i {
+						font-size: 1.3rem;
+					}
+				}
+			}
 		}
 	}
 }
