--- a/resources/assets/sass/icons/_path.scss
+++ b/resources/assets/sass/icons/_path.scss
@@ -3,12 +3,12 @@
 
 @font-face {
   font-family: "Sport-Coach-Finder";
-  src: url("/fonts/icons.eot");
-  src: url("/fonts/icons.eot?#iefix") format("embedded-opentype"),
-       url("/fonts/icons.woff2") format("woff2"),
-       url("/fonts/icons.woff") format("woff"),
-       url("/fonts/icons.ttf") format("truetype"),
-       url("/fonts/icons.svg#Sport-Coach-Finder") format("svg");
+  src: url(#{"/fonts/icons.eot?v=" + $icons8-version});
+  src: url(#{"/fonts/icons.eot?#iefix"}) format("embedded-opentype"),
+       url(#{"/fonts/icons.woff2?v=" + $icons8-version}) format("woff2"),
+       url(#{"/fonts/icons.woff?v=" + $icons8-version}) format("woff"),
+       url(#{"/fonts/icons.ttf?v=" + $icons8-version}) format("truetype"),
+       url(#{"/fonts/icons.svg?v=" + $icons8-version + "#Sport-Coach-Finder"}) format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -16,6 +16,6 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "Sport-Coach-Finder";
-    src: url("/fonts/icons.svg#Sport-Coach-Finder") format("svg");
+    src: url(#{"/fonts/icons.svg?v=" + $icons8-version + "#Sport-Coach-Finder"}) format("svg");
   }
 }
