--- a/resources/assets/sass/components/nav-bar.scss
+++ b/resources/assets/sass/components/nav-bar.scss
@@ -287,11 +287,11 @@
 					}
 					
 					em {
-						font-size: .95rem;
+						font-size: 1.1rem;
 						color: #fff;
 						padding: .3rem .8rem;
 						border-radius: 12px;
-						font-weight: 600;
+						font-weight: 500;
 						margin: .5rem 0;
 						box-shadow: 0 0 15px rgba(#000, .25);
 
