--- a/resources/assets/sass/icons/_variables.scss
+++ b/resources/assets/sass/icons/_variables.scss
@@ -4,7 +4,7 @@
 $icons8-css-prefix: "icons8";
 $icons8-font-name: "Sport-Coach-Finder";
 $icons8-font-path: "/fonts";
-$icons8-version: "3";
+$icons8-version: "4";
 
 $icons8-var-black-twitter-logo: "\f109";
 $icons8-var-caret-arrowhead-facing-down: "\f107";
@@ -33,9 +33,11 @@ $icons8-var-plus: "\f10f";
 $icons8-var-search: "\f104";
 $icons8-var-search-button: "\f105";
 $icons8-var-security: "\f11c";
+$icons8-var-server: "\f126";
 $icons8-var-settings-button: "\f11e";
 $icons8-var-shutdown: "\f11a";
 $icons8-var-survey: "\f121";
+$icons8-var-user-group-man-man: "\f125";
 $icons8-var-warning: "\f11b";
 $icons8-var-wheelchair: "\f115";
 $icons8-var-whistle: "\f103";
