--- a/public/css/app.css
+++ b/public/css/app.css
@@ -604,8 +604,8 @@ template {
 
 @font-face {
   font-family: "Sport-Coach-Finder";
-  src: url(/fonts/icons.eot?v=3);
-  src: url(/fonts/icons.eot?#iefix) format("embedded-opentype"), url(/fonts/icons.woff2?v=3) format("woff2"), url(/fonts/icons.woff?v=3) format("woff"), url(/fonts/icons.ttf?v=3) format("truetype"), url(/fonts/icons.svg?v=3#Sport-Coach-Finder) format("svg");
+  src: url(/fonts/icons.eot?v=4);
+  src: url(/fonts/icons.eot?#iefix) format("embedded-opentype"), url(/fonts/icons.woff2?v=4) format("woff2"), url(/fonts/icons.woff?v=4) format("woff"), url(/fonts/icons.ttf?v=4) format("truetype"), url(/fonts/icons.svg?v=4#Sport-Coach-Finder) format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -613,7 +613,7 @@ template {
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
 @font-face {
     font-family: "Sport-Coach-Finder";
-    src: url(/fonts/icons.svg?v=3#Sport-Coach-Finder) format("svg");
+    src: url(/fonts/icons.svg?v=4#Sport-Coach-Finder) format("svg");
 }
 }
 
@@ -1032,6 +1032,38 @@ i.support-icon:after {
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   content: "\F123";
+}
+
+i.users-icon:after {
+  display: inline-block;
+  font-family: "Sport-Coach-Finder";
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-decoration: inherit;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  content: "\F125";
+}
+
+i.server-icon:after {
+  display: inline-block;
+  font-family: "Sport-Coach-Finder";
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-decoration: inherit;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  content: "\F126";
 }
 
 @-webkit-keyframes fadeIn {
