Add admin heading section

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -21,6 +21,8 @@ $container-width-large: 1440px;
 $container-width-medium: 930px;
 $container-width-small: 620px;
 
+$admin-side-menu-width: 180px;
+
 // Shadows
 $standard-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
 
