--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -11,4 +11,6 @@
 // Main styles
 @import "main";
 
+// === Components ===
 @import "components/admin/side-menu";
+@import "components/admin/panel";
