--- a/resources/assets/sass/icons/_variables.scss
+++ b/resources/assets/sass/icons/_variables.scss
@@ -4,12 +4,13 @@
 $icons8-css-prefix: "icons8";
 $icons8-font-name: "Sport-Coach-Finder";
 $icons8-font-path: "/fonts";
-$icons8-version: "4";
+$icons8-version: "6";
 
 $icons8-var-black-twitter-logo: "\f109";
 $icons8-var-caret-arrowhead-facing-down: "\f107";
 $icons8-var-checkmark: "\f111";
 $icons8-var-circular-arrow: "\f110";
+$icons8-var-clipboard-checklist: "\f12b";
 $icons8-var-close-button: "\f114";
 $icons8-var-coach: "\f100";
 $icons8-var-dashboard: "\f11f";
@@ -30,14 +31,16 @@ $icons8-var-personal-trainer: "\f101";
 $icons8-var-personal-trainer-2: "\f102";
 $icons8-var-phone: "\f113";
 $icons8-var-plus: "\f10f";
+$icons8-var-presentation: "\f12e";
+$icons8-var-review: "\f12f";
 $icons8-var-search: "\f104";
 $icons8-var-search-button: "\f105";
 $icons8-var-security: "\f11c";
-$icons8-var-server: "\f126";
 $icons8-var-settings-button: "\f11e";
 $icons8-var-shutdown: "\f11a";
+$icons8-var-social-group: "\f129";
 $icons8-var-survey: "\f121";
-$icons8-var-user-group-man-man: "\f125";
 $icons8-var-warning: "\f11b";
+$icons8-var-web-design: "\f128";
 $icons8-var-wheelchair: "\f115";
 $icons8-var-whistle: "\f103";
